[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = ["serde"]}
dotenv = "0.15.0"
fern = "0.6.2"
log = "0.4.20"
serde ={ version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
